tests/fixtures/invalid/str_bitor_none.py
# Cannot bitwise OR Str and None
x: str = "hello" | None
